--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   equatable: ^2.0.5
   internet_connection_checker: ^1.0.0+1
   http: ^1.1.0
-  
+  shared_preferences: ^2.2.0 
 
 dev_dependencies:
   flutter_test:
