--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   http: ^1.1.0
   shared_preferences: ^2.2.0 
+  get_it: ^7.6.0
 
 dev_dependencies:
   flutter_test:
